--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
 <p>This module is about the web, what it is, what we can do with it, and what it might be like in the future. Rather than focus on the user side of web technology, such as CSS and Javascript, we are going to take a more holistic approach and examine both the server and client side. We shall look at HTTP (the core of all web technologies) and learn how APIs, Web Services, & RESTful architectures are built to move data around. We will then delve into some more topical discussions, starting with security & privacy on the web, then looking at adding intelligence (Semantic Web), adding increased, scalable interaction (Realtime Web) and private, anonymous, and un-censorable web-technologies (Dark Web). We wrap up the module by examining a few technologies that might form the basis of future web capabilities like Blockchain and IPFS.</p>
 
+<h2>Coursework</h2>
+
+<ul>
+<li><a href="https://www.dropbox.com/s/j0gkrxu3z0pcyge/cw1.pdf?dl=0">Assignment #1</a></li>
+<li><a href="https://www.dropbox.com/s/pi5quop7gt00ajj/cw2.pdf?dl=0">Assignment #2</a></li>
+</ul>
 
 <p>This project is maintained by Simon Wells (<a href="https://github.com/siwells" class="user-mention">@siwells</a>)</p>
 
