--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 <li><a href="https://www.dropbox.com/s/pi5quop7gt00ajj/cw2.pdf?dl=0">Assignment #2</a></li>
 </ul>
 
+
+<h2>Learning Environment</h2>
+<p>We use <a href="http://levinux.com/#1">Levinux</a> as our learning environment. This is a Linux distribution based upon Tiny Core Linux (for the kernel), BusyBox (for the userland), and a selection of Tiny-Core extensions that build everything into a self-contained Python web development environment including Git, Python, Python Flask and various other tools</p>
+
+<ul>
+<li><a href="https://www.dropbox.com/s/bsltez7hgj8n74f/levinux-master_napier.zip?dl=0">Levinux (Napier Edition)</a></li>
+</ul>
+
 <p>This project is maintained by Simon Wells (<a href="https://github.com/siwells" class="user-mention">@siwells</a>)</p>
 
 <h3>
