Alter contact heading

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </ul>
 
 <h2>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h2>
+<a id="cntact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>Simon Wells (<a href="https://github.com/siwells" class="user-mention">@siwells</a>) is the module leader for Advanced Web Tech. You can contact him via email at <a href="mailto:s.wells@napier.ac.uk?Subject=SET09103">s.wells@napier.ac.uk</a></p>
 
