--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 <h3>Learning Environment</h3>
 <p>We use <a href="http://levinux.com/#1">Levinux</a> as our learning environment. This is a Linux distribution based upon Tiny Core Linux (for the kernel), BusyBox (for the userland), and a selection of Tiny-Core extensions that build everything into a self-contained Python web development environment including Git, Python, Python Flask and various other tools</p>
 
+<h3>Workbook & Notes</h3>
+
+<ul>
+<li><a href="https://www.dropbox.com/s/k41vw5a49y64nt7/workbook.pdf?dl=0">Workbook [PDF]</a></li>
+</ul>
+
 <ul>
 <li><a href="https://www.dropbox.com/s/bsltez7hgj8n74f/levinux-master_napier.zip?dl=0">Levinux (Napier Edition)</a></li>
 </ul>
