--- a/index.html
+++ b/index.html
@@ -44,10 +44,24 @@
 <h3>Learning Environment</h3>
 <p>We use <a href="http://levinux.com/#1">Levinux</a> as our learning environment. This is a Linux distribution based upon Tiny Core Linux (for the kernel), BusyBox (for the userland), and a selection of Tiny-Core extensions that build everything into a self-contained Python web development environment including Git, Python, Python Flask and various other tools</p>
 
+
 <h3>Workbook & Notes</h3>
 
 <ul>
 <li><a href="https://www.dropbox.com/s/k41vw5a49y64nt7/workbook.pdf?dl=0">Workbook [PDF]</a></li>
+</ul>
+
+
+<h3>Lectures</h3>
+
+<ul>
+<li><a href="">Lecture 00</a> - Module Vverview</li>
+<li><a href="">Lecture 01</a> - Introduction + Tools + Learning Environment</li>
+<li><a href="">Lecture 02</a> - HTTP</li>
+<li><a href="">Lecture 03</a> - APIs + Web Services + REST</li>
+<li><a href="">Lecture 04</a> - Data Transports (JSON & XML)</li>
+<li><a href="">Lecture 06</a> - Architectures for Scalability</li>
+<li><a href="">Lecture 08</a> - Semantic Web</li>
 </ul>
 
 <ul>
