--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 <h3>Lectures</h3>
 
 <ul>
-<li><a href="">Lecture 00</a> - Module Vverview</li>
-<li><a href="">Lecture 01</a> - Introduction + Tools + Learning Environment</li>
-<li><a href="">Lecture 02</a> - HTTP</li>
-<li><a href="">Lecture 03</a> - APIs + Web Services + REST</li>
-<li><a href="">Lecture 04</a> - Data Transports (JSON & XML)</li>
-<li><a href="">Lecture 06</a> - Architectures for Scalability</li>
-<li><a href="">Lecture 08</a> - Semantic Web</li>
+<li><a href="https://www.dropbox.com/s/x0ic6deyjgxdhtn/L00_overview.pdf?dl=0">Lecture 00</a> - Module Vverview</li>
+<li><a href="https://www.dropbox.com/s/rsnkxxr8g6pflnm/L01_intro%2Btools.pdf?dl=0">Lecture 01</a> - Introduction + Tools + Learning Environment</li>
+<li><a href="https://www.dropbox.com/s/ay7y2gk79bhu35v/L02_http.pdf?dl=0">Lecture 02</a> - HTTP</li>
+<li><a href="https://www.dropbox.com/s/u6eszv5eo5dpxmq/L03_apis%2Bweb.services%2Brest.pdf?dl=0">Lecture 03</a> - APIs + Web Services + REST</li>
+<li><a href="https://www.dropbox.com/s/gomgmldl6xfqgej/L04_data.transport.pdf?dl=0">Lecture 04</a> - Data Transports (JSON & XML)</li>
+<li><a href="https://www.dropbox.com/s/2r4j1qu4tpr2e0g/L06_architectures.pdf?dl=0">Lecture 06</a> - Architectures for Scalability</li>
+<li><a href="https://www.dropbox.com/s/gl99t8l4r6rdz8i/L08_semantic.pdf?dl=0">Lecture 08</a> - Semantic Web</li>
 </ul>
 
 <ul>
