Add links to other supporting tools

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
 <li><a href="https://www.dropbox.com/s/gl99t8l4r6rdz8i/L08_semantic.pdf?dl=0">Lecture 08</a> - Semantic Web</li>
 </ul>
 
+<h3>Resources</h3>
+
+<ul>
+<li><a href="https://github.com/siwells/teaching_set09103/wiki">Module Wiki</a> - You can also <a href="http://moodle.napier.ac.uk/git@github.com:siwells/teaching_set09103.wiki.git">clone the entire wiki</a> using Git if you want a local copy of your own</li>
+<li><a href="https://github.com/siwells/teaching_set09103/issues">Module Issue Tracker</a></li>
+<li><a href="https://github.com/siwells/teaching_set09103">Module Git Repository</a> You can clone the entire module using this <a href="http://moodle.napier.ac.uk/git@github.com:siwells/teaching_set09103.git">clone URL</a></li>
+</ul>
+
 
 <h2>
 <a id="cntact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
