--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <h3>Resources</h3>
 
 <ul>
-<li><a href="https://github.com/siwells/teaching_set09103/wiki">Module Wiki</a> - You can also <a href="http://moodle.napier.ac.uk/git@github.com:siwells/teaching_set09103.wiki.git">clone the entire wiki</a> using Git if you want a local copy of your own</li>
+<li><a href="https://github.com/siwells/teaching_set09103/wiki">Module Wiki</a> - You can also <a href="git@github.com:siwells/teaching_set09103.wiki.git">clone the entire wiki</a> using Git if you want a local copy of your own</li>
 <li><a href="https://github.com/siwells/teaching_set09103/issues">Module Issue Tracker</a></li>
-<li><a href="https://github.com/siwells/teaching_set09103">Module Git Repository</a> You can clone the entire module using this <a href="http://moodle.napier.ac.uk/git@github.com:siwells/teaching_set09103.git">clone URL</a></li>
+<li><a href="https://github.com/siwells/teaching_set09103">Module Git Repository</a> You can clone the entire module using this <a href="git@github.com:siwells/teaching_set09103.git">clone URL</a></li>
 </ul>
 
 
