--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h3>Lectures</h3>
 
 <ul>
-<li><a href="https://www.dropbox.com/s/x0ic6deyjgxdhtn/L00_overview.pdf?dl=0">Lecture 00</a> - Module Vverview</li>
+<li><a href="https://www.dropbox.com/s/x0ic6deyjgxdhtn/L00_overview.pdf?dl=0">Lecture 00</a> - Module Overview</li>
 <li><a href="https://www.dropbox.com/s/rsnkxxr8g6pflnm/L01_intro%2Btools.pdf?dl=0">Lecture 01</a> - Introduction + Tools + Learning Environment</li>
 <li><a href="https://www.dropbox.com/s/ay7y2gk79bhu35v/L02_http.pdf?dl=0">Lecture 02</a> - HTTP</li>
 <li><a href="https://www.dropbox.com/s/u6eszv5eo5dpxmq/L03_apis%2Bweb.services%2Brest.pdf?dl=0">Lecture 03</a> - APIs + Web Services + REST</li>
