Add Realtime Web lecture

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <li><a href="https://www.dropbox.com/s/gomgmldl6xfqgej/L04_data.transport.pdf?dl=1">Lecture 04</a> - Data Transports (JSON & XML)</li>
 <li><a href="https://www.dropbox.com/s/2r4j1qu4tpr2e0g/L06_architectures.pdf?dl=1">Lecture 06</a> - Architectures for Scalability</li>
 <li><a href="https://www.dropbox.com/s/gl99t8l4r6rdz8i/L08_semantic.pdf?dl=1">Lecture 08</a> - Semantic Web</li>
+<li><a href="https://www.dropbox.com/s/okjw31c3p2mfif3/L09_realtime.pdf?dl=1">Lecture 09</a> - The Realtime Web</li>
 </ul>
 
 <h3>Resources</h3>
