--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul>
 <li><a href="https://www.dropbox.com/s/x0ic6deyjgxdhtn/L00_overview.pdf?dl=1">Lecture 00</a> - Module Overview</li>
 <li><a href="https://www.dropbox.com/s/rsnkxxr8g6pflnm/L01_intro%2Btools.pdf?dl=1">Lecture 01</a> - Introduction + Tools + Learning Environment</li>
-<li><a href="https://www.dropbox.com/s/ay7y2gk79bhu35v/L02_http.pdf?dl=1">Lecture 02</a> - HTTP</li>
+<li><a href="https://www.dropbox.com/s/ay7y2gk79bhu35v/L02_http.pdf?dl=1">Lecture 02</a> - The HyperText Transfer Protocol (HTTP)</li>
 <li><a href="https://www.dropbox.com/s/u6eszv5eo5dpxmq/L03_apis%2Bweb.services%2Brest.pdf?dl=1">Lecture 03</a> - APIs + Web Services + REST</li>
 <li><a href="https://www.dropbox.com/s/gomgmldl6xfqgej/L04_data.transport.pdf?dl=1">Lecture 04</a> - Data Transports (JSON & XML)</li>
 <li><a href="https://www.dropbox.com/s/2r4j1qu4tpr2e0g/L06_architectures.pdf?dl=1">Lecture 06</a> - Architectures for Scalability</li>
