--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <li><a href="https://www.dropbox.com/s/2r4j1qu4tpr2e0g/L06_architectures.pdf?dl=1">Lecture 06</a> - Architectures for Scalability</li>
 <li><a href="https://www.dropbox.com/s/gl99t8l4r6rdz8i/L08_semantic.pdf?dl=1">Lecture 08</a> - The Semantic Web</li>
 <li><a href="https://www.dropbox.com/s/okjw31c3p2mfif3/L09_realtime.pdf?dl=1">Lecture 09</a> - The Realtime Web</li>
+<li><a href="https://www.dropbox.com/s/d9qtacnprijhdxt/L10_dark.pdf?dl=1">Lecture 10</a> - The Dark Web</li>
 </ul>
 
 <h3>Resources</h3>
