--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <li><a href="https://www.dropbox.com/s/ay7y2gk79bhu35v/L02_http.pdf?dl=1">Lecture 02</a> - The HyperText Transfer Protocol (HTTP)</li>
 <li><a href="https://www.dropbox.com/s/u6eszv5eo5dpxmq/L03_apis%2Bweb.services%2Brest.pdf?dl=1">Lecture 03</a> - APIs + Web Services + REST</li>
 <li><a href="https://www.dropbox.com/s/gomgmldl6xfqgej/L04_data.transport.pdf?dl=1">Lecture 04</a> - Data Transports (JSON & XML)</li>
-<li><a href="https://www.dropbox.com/s/2r4j1qu4tpr2e0g/L06_architectures.pdf?dl=1">Lecture 06</a> - Architectures for Scalability</li>
+<li><a href="https://www.dropbox.com/s/fcw9tzxsa1fnf3v/L06_architectures%2Bdeployment.pdf?dl=1">Lecture 06</a> - Architectures for Scalability & Deployment</li>
 <li><a href="https://www.dropbox.com/s/gl99t8l4r6rdz8i/L08_semantic.pdf?dl=1">Lecture 08</a> - The Semantic Web</li>
 <li><a href="https://www.dropbox.com/s/okjw31c3p2mfif3/L09_realtime.pdf?dl=1">Lecture 09</a> - The Realtime Web</li>
 <li><a href="https://www.dropbox.com/s/d9qtacnprijhdxt/L10_dark.pdf?dl=1">Lecture 10</a> - The Dark Web</li>
