--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@
 <h3>Learning Environment</h3>
 <p>We use <a href="http://levinux.com/#1">Levinux</a> as our learning environment. This is a Linux distribution based upon Tiny Core Linux (for the kernel), BusyBox (for the userland), and a selection of Tiny-Core extensions that build everything into a self-contained Python web development environment including Git, Python, Python Flask and various other tools</p>
 
+<p>Levinux now has all software used in the module pre-installed so you no longer need to run the scripts to install Python, Git, or Vim.</p>
+
 <ul>
 <li><a href="https://www.dropbox.com/s/69jegtutfxz781b/levinux-master_napier.zip?dl=1">Levinux (Napier Edition)</a></li>
+</ul>
+
+<p>You must properly extract Levinux from its zip archive. Don't try to run it from the compressed file as this won't work. Windows built in extractor also has issues extracting all of the files from the zip archive so I recommend using this portable version of 7zip:</p>
+
+<ul>
+<li><a href="https://www.dropbox.com/s/z37h2ko4x1y8lmo/7-ZipPortable_16.02.paf.exe?dl=1">7zip Portable</a></li>
+</ul>
+
+<p>Once your Levinux system is up and running you will need to log into it. Don't log in directly to the Levinux window as this has keyboard encoding issues if you are using a non-English keyboard. You also lose the scrollback buffer so are unable to see the output of commands if they are more than a window in size. Instead log in using PuTTY (you can open as many PuTTY windows as you like or need in order to work efficiently):</p>
+
+<ul>
+<li><a href="https://www.dropbox.com/s/36pdafv8v9n4s6r/putty.exe?dl=1">7zip Portable</a></li>
 </ul>
 
 
