--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>Once your Levinux system is up and running you will need to log into it. Don't log in directly to the Levinux window as this has keyboard encoding issues if you are using a non-English keyboard. You also lose the scrollback buffer so are unable to see the output of commands if they are more than a window in size. Instead log in using PuTTY (you can open as many PuTTY windows as you like or need in order to work efficiently):</p>
 
 <ul>
-<li><a href="https://www.dropbox.com/s/36pdafv8v9n4s6r/putty.exe?dl=1">7zip Portable</a></li>
+<li><a href="https://www.dropbox.com/s/36pdafv8v9n4s6r/putty.exe?dl=1">PuTTY</a></li>
 </ul>
 
 
