Add note about running Levinux from USB

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h3>Learning Environment</h3>
 <p>We use <a href="http://levinux.com/#1">Levinux</a> as our learning environment. This is a Linux distribution based upon Tiny Core Linux (for the kernel), BusyBox (for the userland), and a selection of Tiny-Core extensions that build everything into a self-contained Python web development environment including Git, Python, Python Flask and various other tools</p>
 
-<p>Levinux now has all software used in the module pre-installed so you no longer need to run the scripts to install Python, Git, or Vim.</p>
+<p>Levinux now has all software used in the module pre-installed so you no longer need to run the scripts to install Python, Git, or Vim. Levinux seems to run most reliably from a USB stick (<b>this is recommended</b>). This also means that you can easily take all of your code and data with you to run on any other machine (rather than being tied to a university lab machine).</p>
 
 <ul>
 <li><a href="https://www.dropbox.com/s/69jegtutfxz781b/levinux-master_napier.zip?dl=1">Levinux (Napier Edition)</a></li>
