Add section on labs

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 <li><a href="https://www.dropbox.com/s/k41vw5a49y64nt7/workbook.pdf?dl=1">Workbook [PDF]</a></li>
 </ul>
 
+<h3>Labs</h3>
 
+<p>During each weeks lab you should work through a chapter of the workbook. For example in week 1 work through chapter 1, in week 2, chapter, and so on. As the module develops, and especially as you start to think about and work on your coursework assignments then you might benefit from reading ahead, or jumping to specific chapters that are useful or interesting. This is entirely fine.</p>
 <h3>Lectures</h3>
 
 <ul>
