--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
 
 <h3>Workbook & Notes</h3>
 
+<p>The workbook is updated throughout the trimester so it is worth downloading a new copy each week so that you don't miss new sections or bugfixes.</p>
+
 <ul>
 <li><a href="https://www.dropbox.com/s/k41vw5a49y64nt7/workbook.pdf?dl=1">Workbook [PDF]</a></li>
 </ul>
+
+<p>If you notice a mistake in the workbook then feel free to open an issues in the module's <a href="https://github.com/siwells/teaching_set09103/issues">issue tracker</a>. Even better, all the materials are in the module's git repo so also feel free to clone, fix, and issue a pull-request.</p>
 
 <h3>Labs</h3>
 
